[package]
name = "packet-play"
version = "0.1.0"
edition = "2021"
description = """
A tool to replay .pcap files (and .pcapng in the future). Assumes captured packets were recorded as UDP over IP/Ethernet.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  { version = "4.0.20", features = ["derive"] }
thiserror = "1.0"
pcap-files = { path = "../pcap-files" }
log = "0.4.17"
serde = "1.0"