[package]
name = "pcap-files"
version = "0.1.0"
edition = "2021"
authors = ["Zeeger Lubsen <zeeger@lubsen.eu>"]
description = """
Read .pcap/.pcapng files.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
thiserror = "1.0.37"