[package]
name = "play-cli"
version = "0.1.0"
edition = "2021"
authors = ["Zeeger Lubsen <zeeger@lubsen.eu>"]
description = """
CLI tool to replay .pcap files (and .pcapng in the future). Assumes captured packets were recorded as UDP over IP/Ethernet.
The tool uses the tui framework.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  { version = "4.0.20", features = ["derive"] }
crossterm = "0.25.0"
log = "0.4.17"
tui = "0.19.0"
tui-logger = "0.8.1"
pcap-files = { path = "../pcap-files" }
packet-play = { path = "../packet-play" }
packet-rehash-core = { path = "../packet-rehash-core" }
