[package]
name = "play-cli"
version = "0.1.0"
edition = "2021"
authors = ["Zeeger Lubsen <zeeger@lubsen.eu>"]
description = """
CLI tool to replay .pcap files (and .pcapng in the future). Assumes captured packets were recorded as UDP over IP/Ethernet.
The tool uses the tui framework.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  { version = "4.2.7", features = ["derive"] }
crossterm = "0.26.1"
log = "0.4.17"
ratatui = "0.21.0"
tui-logger = { version = "0.9.1", default-features = false, features = ["ratatui-support"] }
pcap-files = { path = "../pcap-files" }
packet-play = { path = "../packet-play" }
packet-rehash-core = { path = "../packet-rehash-core" }
