[package]
name = "play-gui"
version = "0.1.0"
edition = "2021"
authors = ["Zeeger Lubsen <zeeger@lubsen.eu>"]
description = """
Desktop tool to replay .pcap files (and .pcapng in the future). Assumes captured packets were recorded as UDP over IP/Ethernet.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.18.0"
egui = "0.18.1"
env_logger = "0.9.0"
pcap-files = { path = "../pcap-files" }
packet-play = { path = "../packet-play" }
