[package]
name = "play-gui"
version = "0.1.0"
edition = "2021"
authors = ["Zeeger Lubsen <zeeger@lubsen.eu>"]
description = """
Desktop tool to replay .pcap files (and .pcapng in the future). Assumes captured packets were recorded as UDP over IP/Ethernet.
The GUI uses the egui framework.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  { version = "4.2.7", features = ["derive"] }
eframe = "0.21.3"
egui = "0.21.0"
env_logger = "0.10.0"
log = "0.4.17"
pcap-files = { path = "../pcap-files" }
packet-play = { path = "../packet-play" }
packet-rehash-core = { path = "../packet-rehash-core" }
